Fixed on mobile (for the most part).

--- a/app.css
+++ b/app.css
@@ -1,6 +1,6 @@
 html {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -8,9 +8,10 @@ body {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+  display: flex;
   width: 960px;
-  height: 100%;
-  overflow: hidden;
+  min-height: 100vh;
+  flex-direction: column;
   font-family: "Oxygen Mono";
   font-size: 1.6em;
   letter-spacing: .1em;
@@ -18,27 +19,26 @@ body {
   background-color: rgb(17,25,17);
 }
 
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
   body { width: 80%; }
 }
 
-@media only screen and (min-width : 481px) and (max-width : 767px) {
+@media only screen and (min-width: 481px) and (max-width: 767px) {
   body {
     width: 90%;
     font-size: 1.1em;
   }
 }
 
-@media only screen and (max-width : 480px) {
+@media only screen and (max-width: 480px) {
   body {
     width: 90%;
     font-size: .9em;
   }
 }
 
-.container {
-  position: relative;
-  height: 100%;
+.content {
+  flex: 1;
 }
 
 hr {
@@ -46,6 +46,7 @@ hr {
 }
 
 .word-list {
+  min-height: 10em;
   padding: 0;
   margin: 0 -1em .5em 0;
 }
@@ -97,10 +98,9 @@ hr {
 
 .word-cmdline {
   position: absolute;
-  bottom: 2em;
+  bottom: 1em;
   width: 100%;
   padding-top: .5em;
-  border-top: 3px solid rgb(0,255,0);
 }
 
 .word-cmdline:after {
@@ -160,7 +160,7 @@ hr {
 .word-buttons > button {
   float: left;
   padding: 0;
-  margin-left: 1em;
+  margin-left: .5em;
   font-family: "Oxygen Mono";
   font-size: 1em;
   letter-spacing: .1em;
@@ -168,6 +168,10 @@ hr {
   color: rgb(0,255,0);
   background: none;
   border: 0;
+}
+
+.word-buttons > button:first-child {
+  margin-left: 0;
 }
 
 .word-buttons > button:hover {
